# supervised-basico-spirals

./: README.md  main.py  pyproject.toml  test-set.csv  training-set.csv
