[tool.poetry]
name = "supervised-basico-spirals"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
plotly = "^4.5.1"
numpy = "^1.18.1"
pandas = "^1.0.1"
typer = "^0.0.8"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
